--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3"
 services:
-    web:
-        image: mobytoby/get-started:part2
-        deploy:
-            replicas: 5
-            resources:
-                limits:
-                    cpus: "0.1"
-                    memory: 50M
-            restart_policy:
-                condition: on-failure
-        ports:
-            - "4000:80"
-        networks:
-            - webnet
+  web:
+    # replace username/repo:tag with your name and image details
+    image: mobytoby/get-started:part2
+    deploy:
+      replicas: 5
+      resources:
+        limits:
+          cpus: "0.1"
+          memory: 50M
+      restart_policy:
+        condition: on-failure
+    ports:
+      - "8080:80"
+    networks:
+      - webnet
 networks:
-    webnet:
+  webnet:
